--- a/Index.html
+++ b/Index.html
@@ -60,13 +60,13 @@
     
 <br> <!-- Space between lines. -->    <br> <!-- Space between lines. -->
     <p>
-    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">
         <img style="border:0;width:88px;height:31px"
-            src="http://jigsaw.w3.org/css-validator/images/vcss"
+            src="https://jigsaw.w3.org/css-validator/images/vcss"
             alt="Valid CSS!" />
     </a> <!--- This is the CSS validator insert which has been used to authenticate the CSS coding. -->
 </p>
-    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>. <!-- This is the Creative Commons Licence which has been applied to this website -->
+    <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>. <!-- This is the Creative Commons Licence which has been applied to this website -->
     
 <footer> This website was designed and created by Joshua Paterson - <a href="https://www.naturesphotography.co.nz/">Natures Photography.</a></footer> <!-- A footer which explains who the website was designed and created by with a link to the website. -->
 
