--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet"> <!-- Font from Google Fonts. This font is used on the Natures Photography Website. -->
     </head> <!-- The end of the header section of the website. -->
    
-          <a href="index.html" title="Go to our home page."><img src="Images/Natures_Photography_Logo.png" alt="Natures Photography's Logo" width="50%"></a> <!-- The logo of the website in an image but if clicked it will take you to the home page --><br> <!-- Space between lines. -->
+          <a href="index.html" title="Go to our home page."><img src="Images/Natures_Photography_Logo.png" alt="Natures Photography's Logo" width="400px"></a> <!-- The logo of the website in an image but if clicked it will take you to the home page --><br> <!-- Space between lines. -->
         <div class="topnav"> <!-- The div class for the top navigation bar -->
           <a href="index.html" title="Go to our home page." class="nav" ><strong>Home Page</strong></a> <!-- A button and if clicked, it takes you to the home page. -->
           <a href="About_Us.html" title="Go to our about us page." class="nav" ><strong>About Us</strong></a><!-- A button and if clicked, it takes you to the about us page. -->
@@ -33,7 +33,7 @@
     <div class="parallax"><!-- A scrooling feature enabling the user to scroll down without the image. -->
     
     <br> <!-- Space between lines. --> <!-- Space between lines. -->
-    <p> Kia ora tena koutou katoa,</p><!-- Text for the website page. -->
+    <p> Kia ora,</p><!-- Text for the website page. -->
     <p> Welcome to Natures Photography.</p><!-- Text for the website page. --></div><!-- End of parallax. -->
     
 
