--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,7 +8,7 @@
     <meta name="geo.placename" content="Henderson High School Auckland"> <!-- Location of educational facility.-->
     <meta name="description" content="Home Page"> <!-- Meta tag for the descirption of the page. -->
     <meta name="keywords" content="Natures Photography Portfolio"> <!-- Meta tag for the keywords of the page -->
-
+<script src="main_javascript.js"></script> <!-- Javascript add for image 6. -->
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet"> <!-- Font from Google Fonts. This font is used on the Natures Photography Website. -->
     </head> <!-- The end of the header section of the website. -->
    
@@ -42,10 +42,11 @@
 <div class="column"> <!-- Div class for the columns in the table. -->
 <img src="Images/Watermarked%20for%20Gallery/Image%20(5).JPG" alt="Image 5" class="imagebox"><p style="font-size:1.5vw;">Image 5</p></div> <!-- An image shown on the website with a title. -->
 
-<div class="column"> <!-- Div class for the columns in the table. -->
-<img src="Images/Watermarked%20for%20Gallery/Image%20(6).JPG" alt="Image 6" class="imagebox"><p style="font-size:1.5vw;">Image 6</p></div> <!-- An image shown on the website with a title. -->
-
-               </div>  <!-- End of div class for the table. -->
+  </div>  <!-- End of div class for the table. -->
+    
+<img id="change_image" src="Images/Download/Download_Auckland_Strand%20(1).JPG" alt="Image 5" class="imagebox">
+<button class="downloadbutton" onclick="myFunction()">Change Image</button>
+               
     </div> <!-- End of transcript box for the main body -->
 <br> <!-- Space between lines. -->
            <br> <!-- Space between lines. -->
